Model for subject and course is created. Model for lecturer and student is also created. A controller for student_dashboard and lecturer has created.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+#login-page {
+  margin-left: 350px;
+  margin-top: 150px;
+  margin-right: 450px;
+  box-shadow: 10px 5px 15px;
+}
+
+ a:link{
+  text-decoration: none;
+  color: #555;
+ }	
