--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,46 @@
   </head>
 
   <body>
-    <%= yield %>
+  <nav class="navbar navbar-inverse navbar-top navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+             <span class="sr-only">Toggle navigation</span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+            </button>
+           
+            <a class="navbar-brand" href="/" style="float:right; margin-left: 10px;">IslingtonClassroom</a>
+  
+          </div>
+          <% if user_signed_in?%>
+          <ul class="nav navbar-nav navbar-right">
+          	<li><%= link_to "Log Out", destroy_user_session_path, method: :delete%></li>
+            <li class="dropdown">
+             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email%> <span class="caret"></span></a>
+              <!-- <ul class="dropdown-menu">
+                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete%></li>
+              </ul> -->
+            </li> 
+          </ul> 
+          <% end %> 
+        </div>
+      </div>   
+    </nav>
+    <!-- <div id="pop-up-modal">
+  </div> -->
+
+<!-- <nav class="navbar navbar-inverse sidebar" role="navigation" style="position: fixed; margin-top: 50px;">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <!--  -->
+ <!--  </div>
+</nav> -->
+
+    <div style="padding-top:50px;padding-bottom: 60px">
+      <%= yield %>
+    </div>
   </body>
 </html>
